# digikam-mediaserver-standalone

./: CMakeLists.txt  README.md
upnpsdk/Neptune/Source/Core/: NptBufferedStreams.cpp  NptList.h
upnpsdk/Neptune/Source/System/Android/: NptAndroidDebug.cpp
upnpsdk/Neptune/Source/System/Bsd/: NptBsdSockets.cpp
upnpsdk/Neptune/Source/System/StdC/: NptStdcDebug.cpp
upnpsdk/Neptune/Source/System/Win32/: NptWin32Debug.cpp  NptWin32File.cpp
upnpsdk/Neptune/Source/System/WinRT/: NptWinRtDebug.cpp
upnpsdk/Platinum/Source/Core/: PltDeviceHost.cpp
upnpsdk/Platinum/Source/Tests/FileMediaServer/: FileMediaServerTest.cpp
